readable: set navbar-inverse background-color, fixes #219

--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -4019,7 +4019,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #4582ec;
 }
 .navbar-inverse {
-  background-color: transparent;
+  background-color: #ffffff;
   border-color: transparent;
 }
 .navbar-inverse .navbar-brand {
@@ -4065,7 +4065,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
-  border-color: rgba(0, 0, 0, 0);
+  border-color: #ededed;
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
