--- a/readable/variables.less
+++ b/readable/variables.less
@@ -360,7 +360,7 @@
 // Inverted navbar
 // Reset inverted navbar basics
 @navbar-inverse-color:                      @text-color;
-@navbar-inverse-bg:                         transparent;
+@navbar-inverse-bg:                         @body-bg;
 @navbar-inverse-border:                     transparent;
 
 // Inverted navbar links
